[package]
name = "fx-hash"
version = "0.1.0"
authors = ["The Rust Project Developers", "0xJWLabs <0xjwlabs@gmail.com>"]
description = "A speedy, non-cryptographic hashing algorithm used by rustc. Fork of rustc-hash."
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["hash", "hasher", "fxhash", "rustc"]
repository = "https://github.com/win-rs/fx-hash"
edition = "2024"

[features]
default = ["std"]
std = []
nightly = []
